--- a/code/js/front-end/src/app/login/login.component.html
+++ b/code/js/front-end/src/app/login/login.component.html
@@ -28,7 +28,7 @@
       </div>
     </form>
     <div>
-      <p class="text">Don't have an account? <a [routerLink]="'/signup'">Register here.</a></p>
+      <p class="text">Don't have an account? <a href="#" (click)="register()">Register here.</a></p>
     </div>
   </div>
 </div>
