Invites Implementation Back-end

--- a/code/js/front-end/src/app/sign-up/sign-up.component.html
+++ b/code/js/front-end/src/app/sign-up/sign-up.component.html
@@ -99,7 +99,7 @@
       </div>
     </form>
     <div>
-      <p class="text">Already have an account? <a href="#" (click)="login()">Login here.</a></p>
+      <p class="text">Already have an account? <a routerLink="/login">Login here.</a></p>
     </div>
   </div>
 </div>
