Invite List Page Implemented + Invite Page "Started"

--- a/code/js/front-end/src/app/app.component.html
+++ b/code/js/front-end/src/app/app.component.html
@@ -37,6 +37,11 @@
           <button
             class="side-option-button"
             routerLinkActive="side-option-active"
+            routerLink="invites">Invites
+          </button>
+          <button
+            class="side-option-button"
+            routerLinkActive="side-option-active"
             routerLink="Logout"
             (click)="logout()">Logout
           </button>
