--- a/code/js/front-end/src/app/work-details/work-details.component.html
+++ b/code/js/front-end/src/app/work-details/work-details.component.html
@@ -29,7 +29,7 @@
           </button>
         </div>
         <mat-divider></mat-divider>
-        <div class="log-container">
+        <div>
           <mat-list *ngFor="let entry of filteredLogList">
             <mat-list-item (click)="onLogEntryClick(entry.id)">
               <div matListItemTitle>{{ entry.title }}</div>
