SignUp Page and Component update + Bugfix in EditProfile function

--- a/code/js/front-end/src/app/sign-up/sign-up.component.html
+++ b/code/js/front-end/src/app/sign-up/sign-up.component.html
@@ -66,6 +66,23 @@
       </div>
       <div class="input">
         <div>
+          <label for="association-name">Association Name</label>
+        </div>
+        <div>
+          <input type="text" id="association-name" name="association-name" [(ngModel)]="association_name">
+        </div>
+      </div>
+
+      <div class="input">
+        <div>
+          <label for="association-num">Association Number</label>
+        </div>
+        <div>
+          <input type="text" id="association-num" name="association-num" [(ngModel)]="association_num">
+        </div>
+      </div>
+      <div class="input">
+        <div>
           <label>County</label>
         </div>
         <div>
