--- a/code/js/front-end/src/app/invite-details/invite-details.component.css
+++ b/code/js/front-end/src/app/invite-details/invite-details.component.css
@@ -44,6 +44,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  max-width: 30%;
   width: auto;
   height: auto;
   background-color: #11113D;
@@ -65,6 +66,7 @@
 .header-title {
   font-size: 200%;
   margin: 0;
+  text-align: center;
 }
 
 .form-association {
