--- a/code/js/front-end/src/app/work/work.component.css
+++ b/code/js/front-end/src/app/work/work.component.css
@@ -1,3 +1,50 @@
+html, body {
+  height: 100%;
+  margin: 0;
+  overflow: hidden; /* Prevent scrolling */
+}
+
+.header {
+  display: flex;
+  justify-content: space-between; /* Move items to opposite ends */
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+h2 {
+  margin: 10px; /* Remove default margin */
+}
+
+.create-work-button {
+  padding: 8px; /* Adjust padding for smaller button */
+  height: auto;
+  width: auto;
+  margin-right: 20px;
+  margin-left: 10px;
+}
+
+input[type="text"] {
+  border: solid 1px #000000;
+  padding: 10px;
+  border-radius: 8px;
+  margin-right: 4px;
+  width: 30%; /* Adjust the width of the input */
+}
+
+button {
+  padding: 10px 20px; /* Adjust padding for better button size */
+  border: solid 1px #020241;
+  background: #0326da;
+  color: white;
+  border-radius: 8px;
+}
+
+.input-button-container {
+  display: flex;
+  justify-content: flex-end; /* Shifts the input container to the right */
+  align-items: center;
+  width: 100%;
+}
 
 .results {
   display: grid;
@@ -8,25 +55,16 @@
   justify-content: space-around;
 }
 
-input[type="text"] {
-  margin-top: 10px;
-  margin-left: 10px;
-  border: solid 1px #000000;
-  padding: 10px;
-  border-radius: 8px;
-  margin-right: 4px;
-  display: inline-block;
-  width: 30%;
-}
+@media (max-width: 499px) {
+  .header {
+    flex-direction: column;
+    align-items: stretch;
+  }
 
-button {
-  margin-top: 10px;
-  margin-left: 10px;
-  padding: 10px;
-  border: solid 1px #020241;
-  background: #0326da;
-  color: white;
-  border-radius: 8px;
+  input[type="text"], button {
+    width: 100%;
+    margin: 5px 0;
+  }
 }
 
 @media (min-width: 500px) and (max-width: 768px) {
