Traduções das páginas da aplicação

--- a/code/js/front-end/src/app/app.component.html
+++ b/code/js/front-end/src/app/app.component.html
@@ -5,7 +5,7 @@
     </button>
     <a [routerLink]="['/work']">
       <img src="./assets/logo.png" alt="Site Diary" class="top-bar-image">
-      <span class="logo-description">Site Diary</span>
+      <span class="logo-description">Livro de Obra</span>
     </a>
     <div class="profile">
       <button class="notifications" routerLink="invites">
@@ -26,12 +26,12 @@
         <button
           class="side-option-button"
           routerLinkActive="side-option-active"
-          routerLink="work">Works
+          routerLink="work">Obras
         </button>
         <button
           class="side-option-button"
           routerLinkActive="side-option-active"
-          routerLink="create-work">Create Work
+          routerLink="create-work">Criar Obra
         </button>
       </mat-drawer>
       <mat-drawer #drawerProfile class="profile-drawer" mode="over" position="end">
@@ -39,7 +39,7 @@
           <button
             class="side-option-button"
             routerLinkActive="side-option-active"
-            routerLink="profile">Profile
+            routerLink="profile">Perfil
           </button>
           <button
             class="side-option-button"
