--- a/code/js/front-end/src/app/create-work/create-work.component.css
+++ b/code/js/front-end/src/app/create-work/create-work.component.css
@@ -1,3 +1,17 @@
+
+.small-button {
+  width: 2%;
+  height: auto;
+  margin: 10px;
+  background-color: white;
+  border: none;
+  vertical-align: center;
+}
+
+.small-icon {
+  font-size: 200%;
+}
+
 form {
   display: flex;
   justify-content: center;
