--- a/code/js/front-end/src/app/work-invite/work-invite.component.html
+++ b/code/js/front-end/src/app/work-invite/work-invite.component.html
@@ -5,14 +5,14 @@
       <input type="email" matInput [formControl]="emailFormControl" [errorStateMatcher]="matcher"
              placeholder="Ex. pat@example.com">
       <mat-error *ngIf="emailFormControl.hasError('email') && !emailFormControl.hasError('required')">
-        Please enter a valid email address
+        Email Inválido
       </mat-error>
       <mat-error *ngIf="emailFormControl.hasError('required')">
-        Email is <strong>required</strong>
+        Introduzir um email é <strong>obrigatório</strong>
       </mat-error>
     </mat-form-field>
     <mat-form-field>
-      <mat-label>Choose a Role</mat-label>
+      <mat-label>Escolha um Papel</mat-label>
       <mat-select [formControl]="roles" [errorStateMatcher]="matcher">
         <mat-option value=""></mat-option>
         <mat-option value="VIEWER">Espectador</mat-option>
@@ -31,38 +31,30 @@
         <mat-option value="DIRETOR">Diretor</mat-option>
       </mat-select>
       <mat-error *ngIf="roles.hasError('required')">
-        You must select a role
+        Escolher um papel é <strong>obrigatório</strong>
       </mat-error>
     </mat-form-field>
     <button class="add-button" mat-fab (click)="addInvite(email, role)">
       <mat-icon>add</mat-icon>
     </button>
   </div>
-  <table mat-table [dataSource]="invites" class="table">
-    <ng-container matColumnDef="position">
-      <th class="mat-header-cell" *matHeaderCellDef> Order</th>
-      <td class="mat-cell" *matCellDef="let element"> {{ element.position }}</td>
-    </ng-container>
-
+  <table *ngIf="invites.length > 0" mat-table [dataSource]="invites" class="table">
     <ng-container matColumnDef="email">
       <th class="mat-header-cell" *matHeaderCellDef> Email</th>
       <td class="mat-cell" *matCellDef="let element"> {{ element.email }}</td>
     </ng-container>
-
     <ng-container matColumnDef="role">
-      <th class="mat-header-cell" *matHeaderCellDef> Role</th>
+      <th class="mat-header-cell" *matHeaderCellDef> Papel</th>
       <td class="mat-cell" *matCellDef="let element"> {{ element.role }}</td>
     </ng-container>
-
     <ng-container matColumnDef="delete">
-      <th class="mat-header-cell" *matHeaderCellDef> Delete</th>
+      <th class="mat-header-cell" *matHeaderCellDef> Remover</th>
       <td class="mat-cell" *matCellDef="let element">
         <button class="remove-button" mat-fab (click)="removeInvite(element.position)">
           <mat-icon>delete</mat-icon>
         </button>
       </td>
     </ng-container>
-
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
   </table>
